--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=root
+DB_HOST=gest-hosp-mysql.mysql.database.azure.com
+DB_USER=azureadmin
+DB_PASS=Contrasena1
 DB_PORT=3306
