Remove database credentials from .env
Clear sensitive database credentials from the .env file.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=gest-hosp-mysql.mysql.database.azure.com
-DB_USER=azureadmin
-DB_PASS=Contrasena1
-DB_PORT=3306
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_PORT=
